<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#363736"
        android:orientation="horizontal"
        android:padding="10dip"
        android:weightSum="100" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="left|top"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/fragment_tableau_nameAndType"
            android:textColor="#efefef"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="14"
            android:gravity="center_horizontal|top"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/fragment_tableau_demand"
            android:textColor="#efefef"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="14"
            android:gravity="center_horizontal|top"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/fragment_tableau_engage"
            android:textColor="#efefef"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="14"
            android:gravity="center_horizontal|top"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/fragment_tableau_arrive"
            android:textColor="#efefef"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="14"
            android:gravity="center_horizontal|top"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/fragment_tableau_free"
            android:textColor="#efefef"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="14"
            android:gravity="center_horizontal|top"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:text="@string/fragment_tableau_sector"
            android:textColor="#efefef"
            android:textSize="@dimen/text_size" />
        
    </LinearLayout>

    <ListView
        android:id="@+id/fragment_tableau_moyen_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#171f21"
        android:padding="10dp"
        android:dividerHeight="0dp"
        android:scrollbarStyle="outsideOverlay" />

</LinearLayout>