<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100" >

    <LinearLayout  
        	android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="85">

        <!-- Je suis -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/prefixes_rendre_compte_je_suis"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/item_message_list_je_suis_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Je vois -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/prefixes_rendre_compte_je_vois"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/item_message_list_je_vois_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Je prevois -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prefixes_rendre_compte_je_prevois"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/item_message_list_je_prevois_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Je fais -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prefixes_rendre_compte_je_fais"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/item_message_list_je_fais_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- Je demande -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prefixes_rendre_compte_je_demande"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/item_message_list_je_demande_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/item_message_list_button_je_valide"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_vertical|right"
        android:text="@string/fragment_messages_list_cos_message_button_validate"
        android:layout_weight="15" />
    
</LinearLayout>