<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#171f21"
    android:orientation="horizontal"
    tools:ignore="DisableBaselineAlignment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/demande_de_moyen_TextView_GridViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/demande_de_moyen_TextView_GridViewTitle"
            android:textColor="#efefef"
            android:textSize="@dimen/text_size" />

        <GridView
            android:id="@+id/demande_de_moyen_GridView"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:clickable="true"
            android:columnWidth="100dp"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:longClickable="false"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:verticalSpacing="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_size"
            android:layout_weight="0.03"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/demande_de_moyen_TextView_TextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demande_de_moyen_TextView_TextField"
                android:textColor="#efefef"
                android:textSize="@dimen/text_size" 
                android:visibility="gone"/>

            <AutoCompleteTextView
                android:id="@+id/demande_de_moyen_AutoCompleteTextView_TextField"
                android:layout_width="match_parent"
                android:layout_height="35dip"
                android:background="#efefef"
                android:textColor="#363636"
                android:completionThreshold="1"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_size"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/demande_de_moyen_TextView_Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/demande_de_moyen_TextView_Quantity"
                android:textColor="#efefef"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/demande_de_moyen_Button_OneLess"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="30"
                    android:background="@drawable/button_style_red"
                    android:text="@string/demande_de_moyen_ButtonText_OneLess"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/demande_de_moyen_EditText_DefaultQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="30"
                    android:background="#efefef"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/demande_de_moyen_EditText_DefaultQuantity"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/text_size"
                    android:color="#000000" >

                </EditText>

                <Button
                    android:id="@+id/demande_de_moyen_Button_OneMore"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="30"
                    android:background="@drawable/button_style_red"
                    android:text="@string/demande_de_moyen_ButtonText_OneMore"
                    android:textSize="@dimen/text_size" />
                
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/demande_de_moyen_Button_AddToList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_style_red"
            android:text="@string/demande_de_moyen_ButtonText_AddToList"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="5dp" >

        <TextView
            android:id="@+id/demande_de_moyen_TextView_ListViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="7dp"
            android:paddingTop="5dp"
            android:text="@string/demande_de_moyen_TextView_ListViewTitle"
            android:textColor="#efefef"
            android:textSize="@dimen/text_size" />

        <ListView
            android:id="@+id/demande_de_moyen_ListView"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginRight="7dp"
            android:layout_marginTop="7dp"
            android:layout_weight="1" >
        </ListView>

        <Button
            android:id="@+id/demande_de_moyen_Button_SendList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_style_grey"
            android:text="@string/demande_de_moyen_ButtonText_SendList"
            android:textColor="#efefef"
            android:textSize="@dimen/text_size"
			/>

</LinearLayout>

</LinearLayout>