<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100" >
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:paddingLeft="10dp" 
        android:paddingRight="5dp">
    
        <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/fragment_create_sector_label_display"
		        android:textColor="@android:color/white"
		        android:paddingRight="5dp"
		        />
		    
		    <EditText 
		        android:id="@+id/fragment_create_sector_libelle"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="text"
		        android:textColor="@android:color/white"
		        android:hint="@string/fragment_create_sector_label_edit_hint"
		        />
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="5dp">
	    
		    <TextView 
	        	android:id="@+id/fragment_create_sector_color_label"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:textColor="@android:color/white"
	        	android:layout_gravity="center_vertical"
	        	android:text="@string/fragment_create_sector_label_color"/>
		    
		    <LinearLayout
		        android:orientation="vertical"
		        android:id="@+id/fragment_create_sector_color_edit"
		        android:layout_width="40dp"
		        android:layout_height="25dp"
		        android:padding="5dp"
		        android:background="@android:color/white"
		    	/>
	     </LinearLayout>
	    
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        android:weightSum="100" >
	        
	        <Button
	            android:id="@+id/fragment_create_sector_validate"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="50"
	            android:padding="5dp"
	            android:width="0dp" 
	            android:text="@string/fragment_create_sector_btn_validate"/>
	        
	        <Button
	            android:id="@+id/fragment_create_sector_cancel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="50"
	            android:width="0dp"
	            android:padding="5dp"
	            android:text="@string/fragment_create_sector_btn_cancel" />
	        
	    </LinearLayout>
	    
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dip" 
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:weightSum="100"
        android:padding="5dp">
        
        <ImageButton
            android:id="@+id/fragment_create_sector_sector_delete"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:src="@drawable/trashbtn" />
        
        <ListView 
            android:id="@+id/fragment_create_sector_created"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
        
    </LinearLayout>
    
</LinearLayout>
